# chefcito-back

./: .gitignore  README.md  azure-pipelines.yml  cli.py  config.py  conftest.py  db_config.yaml  demo_script.py  dev-requirements.txt  requirements.txt  script.py
.github/workflows/: deploy.yml  gateway-AutoDeployTrigger-e448fe87-7412-4d69-bed8-c7fb7a9e5164.yml  python-test.yml
containerfiles/communications/: CONTAINERFILE  requirements.txt
containerfiles/gateway/: CONTAINERFILE  DOCKERFILE  Dockerfile  requirements.txt
containerfiles/opinions/: CONTAINERFILE  requirements.txt
containerfiles/points/: CONTAINERFILE  requirements.txt
containerfiles/reservations/: CONTAINERFILE  requirements.txt
containerfiles/search/: CONTAINERFILE
containerfiles/stats/: CONTAINERFILE  requirements.txt
containerfiles/summaries/: CONTAINERFILE  requirements.txt
containerfiles/users/: CONTAINERFILE  requirements.txt
containerfiles/venues/: CONTAINERFILE  requirements.txt
dev-env/: main.tf
docs/: Activity.drawio  C3Diagram.drawio  C4Diagram.drawio  DiagramaGeneral.excalidraw
scripts/: build.py  users_db_load.py
scripts/chefcito-cli/: pyproject.toml
scripts/chefcito-cli/chefcito_cli/: main.py
scripts/chefcito-cli/chefcito_cli/scripts/: build.py  config.yaml  db_load.py
test/: test_dummy.py
test/commons/: test_distance.py
test/communications/: test_number.py
test/opinions/: test_opinions.py  test_summaries.py
test/points/: test_points.py
test/reservations/: test_query.py  test_reservation.py
test/services/: db_load.py  test_communications.py  (+6 more)
(+85 files in other folders)
